<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <PreferenceCategory
        android:layout="@layout/textview_settings_title"
        android:title="Category Title" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/listLanguageItems"
        android:entryValues="@array/listLanguageValues"
        android:key="languageChooser"
        android:summary="@string/setting_choose_language_desc"
        android:title="@string/setting_choose_language"
        />
    <CheckBoxPreference
        android:id="@+id/language_chooser_checkBox"
        android:defaultValue="true"
        android:key="soundOnOff"
        android:summary="@string/setting_sound_toggle_desc"
        android:title="@string/setting_sound_toggle"/>


</PreferenceScreen>