<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.s198569.hangman.LoginActivity"
    >

    <RelativeLayout
        android:id="@+id/layout_new_player_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_player"
            android:textSize="@dimen/menu_item_size"
            android:shadowRadius="5"
            android:textColor="@color/secondary_1_2"
            android:shadowColor="@color/secondary_1_4"
            android:shadowDx="3"
            android:shadowDy="3"
            android:textAlignment="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/edit_text_new_player"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/secondary_2_2"
            android:textSize="@dimen/new_player_text_size"
            android:paddingTop="60dp"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/edit_text_new_player"
            android:text="@string/menu_play"
            android:onClick="onPlayGameButtonClick"/>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/layout_existing_player_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_below="@+id/layout_new_player_title"
        android:paddingTop="28dp">

        <TextView
            android:id="@+id/existing_players_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_player"
            android:textSize="@dimen/menu_item_size"
            android:shadowRadius="5"
            android:textColor="@color/secondary_1_2"
            android:shadowColor="@color/secondary_1_4"
            android:shadowDx="3"
            android:shadowDy="3"
            android:textAlignment="center"
            android:gravity="center"/>



            <ListView
                android:id="@+id/existing_players_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/existing_players_title"
                android:paddingTop="10dp"
                android:fadeScrollbars="false"
                android:scrollbarSize="20px">
            </ListView>



    </RelativeLayout>


</RelativeLayout>
